<resources>
    <string name="app_name">Solute</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_chats">Chats</string>
    <string name="title_friends">Friends</string>
    <string name="title_people">People</string>
    <string name="title_task">Task</string>
    <string name="title_more">More</string>
    <string name="title_nearby">Nearby</string>
    <string name="title_contacts">Contacts</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="otp">Otp</string>
    <string name="send_otp">Send Otp</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="please_enter_otp_msg">Please enter the OTP received on phone</string>
    <string name="verify">Verify</string>
    <string name="select_user_type">Choose user Type</string>
    <string name="create_account">Create Account</string>
    <string name="select_business_type">Select Type of Business</string>
    <string name="business_details">Business Details</string>
    <string name="create_business">Create Business</string>
    <string name="terms_and_privacy">
        This Terms of Service Agreement sets forth the terms and conditions by which you are sole responsible for what you do and what you get and you agree to share you basic information(Like Name,Profile Picture,Gender etc) with other users. This app is not responsible for any kind of loss or problems you get on this app. Content on this app neither provided nor controlled by the developer so we are not responsible for any content. If you put any offensive content, it will be replaced by *.There will be absolutely to tolerance for misbehave, if you do so then your account will be terminated immediately.You can report someone in chat view by selection top right option. You might see adult contents uploaded by someone, in that case please block that user and report it us. Please don’t add any adult content. Profanity filter is there on chat so you can’t send such words, if you get some words from someone, please report us. Action will be taken as soon as possible, there will be tolerance for such things. Be friendly to others and and let others be friendly to you. Happy making friends to you my friend.
    </string>
    <string name="login_title">Phone Verification</string>
    <string name="login_sub_title">We need to verify your phone number to proceed!</string>
    <string name="delete_group">Delete Group</string>
    <string name="priority_low">Low</string>
    <string name="priority_medium">Medium</string>
    <string name="priority_high">High</string>
    <string name="priority_critical">Critical</string>
    <string name="priority_not_decided">Not Decided Yet</string>
    <string name="in_progress">In Progress</string>
    <string name="completed">Completed</string>
    <string name="comment">Comment</string>
    <string name="pending">Pending</string>
    <string name="hold">On Hold</string>
    <string name="hours">Hours</string>
    <string name="end">End</string>
    <string name="dropped">Dropped</string>
    <string name="deleted">Deleted</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="invalid">invalid</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="critical">Critical</string>
    <string name="not_decided">Not Decided</string>
    <string name="inventory">Inventory</string>
    <string name="create_inventory">Create Inventory</string>
    <string name="business">Business</string>
    <string name="product">Product</string>
    <string name="all_product">All Products</string>
    <string name="category">Category</string>
    <string name="category_name">Category Name</string>
    <string name="sub_category_name">Sub Category Name</string>
    <string name="or_create_new_category">Or create New Category</string>
    <string name="sub_category">Sub Category</string>
    <string name="sale">Sale</string>
    <string name="skip">Skip</string>
    <string name="skip_and_generate_invoice">Skip</string>
    <string name="sale_to_this_customer">Sale</string>
    <string name="add_customer_to_this_sale">Continue</string>
    <string name="cart">Cart</string>
    <string name="checkout">Checkout</string>
    <string name="invoice">Invoice</string>
    <string name="customers">Customers</string>
    <string name="add_new_customer">Add New Customer</string>
    <string name="add_new_product">Add New Product</string>
    <string name="add_customer">Add Customer</string>
    <string name="product_details">Product Details</string>
    <string name="select_category">Select Category</string>
    <string name="select_sub_category">Select Sub Category</string>
    <string name="barcode">Barcode</string>
    <string name="barcode_optional">Barcode (Optional)</string>
    <string name="empty_task_message">No task found, please click on the create task button to start creating task</string>
    <string name="mobile">Mobile</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="name">Name</string>
    <string name="search">Search</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="email">Email</string>
    <string name="email_optional">Email (Optional)</string>
    <string name="save">save</string>
    <string name="create">Create</string>
    <string name="details">Details</string>
    <string name="address">Address</string>
    <string name="attendance">Attendance</string>
    <string name="present">Present</string>
    <string name="stock">Stock</string>
    <string name="history">History</string>
    <string name="price">Price</string>
    <string name="finance">Finance</string>
    <string name="business_name">Business Name</string>
    <string name="gst_number">GST Number</string>
    <string name="tap_to_select_category">Tap to select category</string>
    <string name="tap_to_select_sub_category">Tap to select Sub Category</string>
    <string name="product_name">Product Name</string>
    <string name="product_description">Product Description</string>
    <string name="create_new_business">Create New Business</string>
    <string name="title_activity_product_detail">Product Details</string>
    <string name="title_activity_business">BusinessActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="setting">Setting</string>
    <string name="today">Today</string>
    <string name="week">Week</string>
    <string name="Month">Month</string>
    <string name="year">Year</string>
    <string name="sale_quantity">Sale Quantity -</string>
    <string name="sale_value">Sale Value -</string>
    <string name="invoice_number">Invoice Number</string>
    <string name="business_profile">Business Profile</string>
    <string name="profile">Profile</string>
    <string name="create_address">Create Address</string>
    <string name="menu_home">Home</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="employee">Employee</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_create_employee">CreateEmployeeActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="finish">Finish</string>
    <string name="empty_business_list_message">
        Click here to create business and Start making Profits
    </string>
    <string name="title_activity_employee_details">EmployeeDetailsActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="price_string">₹ %f</string>
    <string name="title_activity_bar_code_scannner">BarCodeScannnerActivity</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="select_state">Select State</string>
    <string name="select_city">Select City</string>
    <string name="description">Description</string>
    <string name="model">Model</string>
    <string name="color">Color</string>
    <string name="measurement_unit">Measurement Unit</string>
    <string name="batch_number">Batch Number</string>
    <string name="batch_date">Batch Date</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="title_onboarding_invoice">Invoice</string>
    <string name="description_onboarding_invoice">Create invoice and share directly to customer by using any other app like SMS or Whatsapp and so on</string>
    <string name="title_onboarding_inventory">Inventory</string>
    <string name="description_onboarding_inventory">Keep track of all your inventory/stocks</string>
    <string name="title_onboarding_reports">Reports</string>
    <string name="description_onboarding_reports">Get reports for every single operations : Sales, Profit, Pending Payments, Premium Customers</string>
    <string name="str_invoice">Invoice</string>
    <string name="str_invoice_date">Date:</string>
    <string name="str_invoice_no">Invoice #:</string>
    <string name="str_invoice_customer_no">Customer #:</string>
    <string name="str_invoice_order_id">Purchase order #:</string>
    <string name="str_invoice_due_date">Payment due by:</string>
    <string name="str_invoice_bill_to">Billed To</string>
    <string name="str_invoice_ship_to">Ship To (if different)</string>
    <string name="str_invoice_item_description">Description</string>
    <string name="str_invoice_item_unit_cost">Unit Cost</string>
    <string name="str_invoice_item_qty">QTY/HR Rate</string>
    <string name="str_invoice_item_amount">Amount</string>
    <string name="str_invoice_currency_symbol">$</string>
    <string name="str_invoice_special_note">Special Notes and Instructions</string>
    <string name="str_invoice_subtotal">Subtotal</string>
    <string name="str_invoice_discount">Discount</string>
    <string name="str_invoice_taxrate">Tax Rate</string>
    <string name="str_invoice_tax">Tax</string>
    <string name="str_invoice_mrp">MRP</string>
    <string name="str_invoice_total">Total</string>
    <string name="str_invoice_disclaimer">Make all cheques payable to my company name</string>
    <string name="str_invoice_thankyou">Thank you for your business!</string>
    <string name="str_invoice_inquiry">Should you have any enquiries concerning this invoice, please contact us</string>
    <string name="str_invoice_footer_addr">123 Your Street City, State, Country, Zip Code</string>
    <string name="str_invoice_footer_tel">Tel: + 1-541-754-3010 | Fax: + 1-541-754-3010 | Email: info@yourwebsite.com | www.yourwebsite.com</string>
    <string name="export_pdf">Export PDF</string>
    <string name="pan_number">PAN Number</string>
    <string name="house_name">Flat Number / House Number/Name</string>
    <string name="street_locality">Street/Locality</string>
    <string name="city">City</string>
    <string name="pin_code_zipcode">Pin Code/ Zipcode</string>
    <string name="state">State</string>
    <string name="landmark">Landmark</string>
    <string name="locate">Locate</string>
    <string name="mrp">MRP</string>
    <string name="cost_price">Cost Price</string>
</resources>