<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/fragment_business_home"
            android:icon="@drawable/ic_home_black"
            android:title="@string/title_home"
            android:onClick="goToHome"
            />
        <item
            android:id="@+id/business_dashboard"
            android:icon="@drawable/dashboard"
            android:title="@string/menu_dashboard" />

        <item
            android:id="@+id/fragment_business_sale"
            android:icon="@drawable/sale"
            android:title="@string/sale" />
        <item
            android:id="@+id/fragment_business_cart"
            android:icon="@drawable/shopping_cart"
            android:title="@string/cart" />
        <item
            android:id="@+id/business_invoice"
            android:icon="@drawable/receipt"
            android:title="@string/invoice" />
        <item
            android:id="@+id/business_customers"
            android:icon="@drawable/ic_person_black"
            android:title="@string/customers" />
        <item
            android:id="@+id/business_employee"
            android:icon="@drawable/employee"
            android:title="@string/employee" />

    </group>
    <item
        android:title="Inventory"
        android:id="@+id/inventory"
        android:icon="@drawable/inventory"
        >
        <menu
            android:checkableBehavior="none"
            android:id="@+id/business_inventory_menu">
            <item
                android:id="@+id/inventory_product"
                android:icon="@drawable/menu_book"
                android:title="@string/product" />
            <item
                android:id="@+id/inventory_category"
                android:icon="@drawable/baseline_category"
                android:title="@string/category" />
            <item
                android:id="@+id/inventory_sub_category"
                android:icon="@drawable/widgets"
                android:title="@string/sub_category" />
            <item
                android:id="@+id/business_stock"
                android:icon="@drawable/inventory"
                android:title="@string/stock" />
            <item
                android:id="@+id/my_business_profile"
                android:icon="@drawable/settings"
                android:title="@string/setting" />
        </menu>
    </item>
</menu>