<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/product_details_menu_details"
        android:icon="@drawable/info"
        android:title="@string/details" />
    <item
        android:id="@+id/product_details_menu_price"
        android:icon="@drawable/currency_rupee"
        android:title="@string/price" />
    <item
        android:id="@+id/product_details_menu_inventory"
        android:icon="@drawable/inventory"
        android:title="@string/inventory" />
    <item
        android:id="@+id/product_details_menu_barcode_list"
        android:icon="@drawable/barcode"
        android:title="@string/barcode" />
    <item
        android:id="@+id/product_details_menu_stock"
        android:icon="@drawable/baseline_history"
        android:title="@string/history" />
</menu>