<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/business_home"
            android:icon="@drawable/ic_home_black"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/business_sale"
            android:icon="@drawable/sale"
            android:title="@string/sale" />
        <item
            android:id="@+id/business_cart"
            android:icon="@drawable/shopping_cart"
            android:title="@string/cart" />

        <item
            android:id="@+id/business_stock"
            android:icon="@drawable/inventory"
            android:title="@string/stock" />
        <item
            android:id="@+id/business_invoice"
            android:icon="@drawable/receipt"
            android:title="@string/invoice" />
    </group>
</menu>