<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/product_details_navigation"
    app:startDestination="@id/product_details_menu_details"
    >
    <fragment
        android:id="@+id/product_details_menu_details"
        android:name="com.solute.ui.business.product.detail.productDetails.ProductDetailsFragment"
        android:label="@string/details"
        tools:layout="@layout/fragment_product_details" />
    <fragment
        android:id="@+id/product_details_menu_price"
        android:name="com.solute.ui.business.product.detail.productPriceDetails.ProductPriceDetailsFragment"
        android:label="@string/price"
        tools:layout="@layout/fragment_product_price_details" />

    <fragment
        android:id="@+id/product_details_menu_inventory"
        android:name="com.solute.ui.business.product.detail.inventory.ProductDetailInventoryFragment"
        android:label="@string/inventory"
        tools:layout="@layout/fragment_product_detail_inventory" />
    <fragment
        android:id="@+id/product_details_menu_barcode_list"
        android:name="com.solute.ui.business.product.detail.productDetailBarcode.ProductDetailBarcodeListFragment"
        android:label="@string/barcode"
        tools:layout="@layout/fragment_product_detail_barcode_list" />
    <fragment
        android:id="@+id/product_details_menu_stock"
        android:name="com.solute.ui.business.product.detail.productStockDetails.ProductStockDetailsFragment"
        android:label="@string/history"
        tools:layout="@layout/fragment_product_stock_details" />
</navigation>


