<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/business_home_navigation"
    app:startDestination="@id/navigation_business_home_business"
    >
    <fragment
        android:id="@+id/navigation_business_home_business"
        android:name="com.solute.ui.businessList.BusinessListFragment"
        android:label="@string/business"
        tools:layout="@layout/fragment_business_list" />
    <fragment
        android:id="@+id/navigation_business_home_more"
        android:name="com.solute.ui.more.MoreFragment"
        android:label="@string/title_more"
        tools:layout="@layout/fragment_more" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.solute.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/navigation_select_business_type"
        android:name="com.solute.ui.onBoardBusiness.SelectBusinessTypeFragment"
        android:label="@string/select_business_type"
        tools:layout="@layout/fragment_select_business_type" />
    <fragment
        android:id="@+id/navigation_create_business"
        android:name="com.solute.ui.onBoardBusiness.SelectBusinessTypeFragment"
        android:label="@string/select_business_type"
        tools:layout="@layout/fragment_select_business_type" />


</navigation>